<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/reviewItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.4"
        android:hint="@string/item_name_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/reviewItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:hint="@string/item_price_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/removeItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="0dp"
        android:text="@string/remove_item" />
</LinearLayout>
